# efi-boilerplate

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  launch.sh
src/: main.cpp
